--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable" >
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg">
+    <!--AOS css -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" > 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg"> 
     <title>Reclaim</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -12,6 +14,7 @@
         font-family: "Barlow", sans-serif;
       }
     </style>
+    
 </head>
     <body>
 <!-- Header and Navigation -->
@@ -65,7 +68,7 @@
 <section class="bg-gray-900" id="why-it-matters">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-4">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg">
-        <h1 class="max-w-2xl mb-0 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Why it matters?</h1>
+        <h1 data-aos="fade-right" class="max-w-2xl mb-0 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Why it matters?</h1>
         <div class="container pt-10 pb-15">
           <ol class="space-y-2 leading-relaxed">
             <li class="flex text-body-color text-gray-300">
@@ -116,20 +119,20 @@
     <p class="text-gray-600 mb-10">Take a look at these statistics from around the world.</p>
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       <div>
-        <h3 class="text-4xl font-bold text-red-600">200K+</h3>
-        <p class="text-gray-700 mt-2">Porn sites exist globally</p>
+        <h3 data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-4xl font-bold text-red-600">200K+</h3>
+        <p  data-aos="fade-up" data-aos-anchor-plaecment="top-bottom"class="text-gray-700 mt-2">Porn sites exist globally</p>
       </div>
       <div>
-        <h3 class="text-4xl font-bold text-red-600">90%+</h3>
-        <p class="text-gray-700 mt-2">Teen boys exposed early</p>
+        <h3 data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-4xl font-bold text-red-600">90%+</h3>
+        <p data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-gray-700 mt-2">Teen boys exposed early</p>
       </div>
       <div>
-        <h3 class="text-4xl font-bold text-red-600">56%</h3>
-        <p class="text-gray-700 mt-2">Divorces linked to porn</p>
+        <h3 data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-4xl font-bold text-red-600">56%</h3>
+        <p data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-gray-700 mt-2">Divorces linked to porn</p>
       </div>
       <div>
-        <h3 class="text-4xl font-bold text-red-600">11</h3>
-        <p class="text-gray-700 mt-2">Avg. age of first exposure</p>
+        <h3 data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-4xl font-bold text-red-600">11</h3>
+        <p data-aos="fade-up" data-aos-anchor-plaecment="top-bottom" class="text-gray-700 mt-2">Avg. age of first exposure</p>
       </div>
     </div>
   </div>
@@ -265,6 +268,20 @@
 </footer>
 
 
+  <!-- SCRIPTS -->
 
+   <!--Tailwind CDN-->
+   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> 
+   <!--AOS-->
+   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+   <!--AOS initialization-->
+   <script>
+    
+     AOS.init({
+       duration: 800,
+       once:false,
+     });
+
+   </script>
 </body>
 </html>
