--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--AOS css -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" > 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg"> 
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.ico"> 
     <!--Tailwind CDN-->
    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Reclaim</title>
